# klft

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_REVIEW_NOTES.md  PLAN.md  README.md  pyproject.toml
analysis/: CMakeLists.txt  partition_benchmark.py  plaquette_stats.py  polyakov_stats.py  stats_common.py  wtemp_stats.py
binaries/: CMakeLists.txt  gradient_flow_check.cpp  heatbath.cpp  heatbath_multilevel.cpp  metropolis.cpp
include/: AdjointField.hpp  CompiledTheory.hpp  Field.hpp  FieldTypeHelper.hpp  GLOBAL.hpp  GaugeEnergy.hpp  GaugeField.hpp  GaugeGroup.hpp  GaugeMonomial.hpp  GaugeObservable.hpp  GaugePlaquette.hpp  GaugeRetrace.hpp  GaugeVector.hpp  Gauge_Params.hpp  Gauge_Util.hpp  HamiltonianField.hpp  Heatbath.hpp  Heatbath_Params.hpp  IndexHelper.hpp  InputParser.hpp  Integrator.hpp  Metropolis.hpp  Metropolis_Params.hpp  Monomial.hpp  PTBCGaugeField.hpp  SUN.hpp  SUNField.hpp  ScalarField.hpp  Tuner.hpp  WilsonLoop.hpp  field_complex.hpp  field_gauge.hpp  field_real.hpp  field_sun.hpp  gauge_conf_upd.hpp  gauge_obs_def.hpp  gauge_obs_meas.hpp  klft.hpp  klft_params.hpp
include/core/: common.hpp  compiled_theory.hpp  indexing.hpp  klft_config.hpp.in
include/fields/: complex_field.hpp  field_type_traits.hpp  gauge_field.hpp  scalar_field.hpp
include/groups/: gauge_group.hpp  group_ops.hpp
include/io/: driver_utils.hpp  input_parser.hpp
include/observables/: clover_energy.hpp  gauge_observables.hpp  multihit_links.hpp  nested_wilson_action.hpp  plaquette.hpp  polyakov_correlator.hpp  polyakov_loop.hpp  polyakov_multilevel.hpp  polyakov_susceptibility.hpp  retrace.hpp  wilson_loop.hpp
include/params/: gradient_flow_params.hpp  heatbath_params.hpp  metropolis_params.hpp  multilevel_params.hpp  partitioning_params.hpp
include/partitioning/: partition_table.hpp
include/updates/: gradient_flow.hpp  heatbath.hpp  heatbath_link_updates.hpp  heatbath_multilevel.hpp  metropolis.hpp  partitioned_metropolis.hpp  restricted_heatbath.hpp
lib/: CMakeLists.txt  Heatbath.cpp  Metropolis.cpp  heatbath.cpp  heatbath_multilevel.cpp  klft.cpp  metropolis.cpp
partitionings/: fibonacci_N88.yaml  linear_m3.yaml
tests/: CMakeLists.txt  partitioning_test.cpp
tools/: __init__.py  generate_partitioning.py  test_generate_partitioning.py
